# orchestr8

./: .gitignore  .gitleaks.toml  ADR-001-AUTONOMOUS-BACKGROUND-EXECUTION.md  ADR-002-INTELLIGENCE-DATABASE-ARCHITECTURE.md  ANSWER-TOKEN-REDUCTION-QUESTION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE-AUDIT-CHECKLIST.md  INSTALLATION-COMPLETE.md  LICENSE  MEDIUM.md  README.md  REVIEW-SUMMARY.md  SECURITY.md  TOKEN-REDUCTION-ANALYSIS.md  WORKFLOW-DATABASE-INTEGRATION-GUIDE.md  WORKFLOW-DB-INTEGRATION-SUMMARY.md  verify_all_shas.sh  verify_shas.py
.claude/: CHANGELOG.md  CLAUDE.md  PLUGIN_INTEGRATION.md  QUICKSTART.md  RELEASE.md  SYSTEM_INSTRUCTIONS.md  agent-registry.yml  init.sh  plugin.json  status.sh  stop.sh  token-measurement-harness.js  token-measurement-results.json
.claude-plugin/: marketplace.json
.claude/commands/: add-feature.md  deploy.md  fix-bug.md  optimize-performance.md  refactor.md  review-architecture.md  review-code.md  review-pr.md  security-audit.md  test-web-ui.md
.claude/database/: .env.example  .gitignore  AUTONOMOUS_SETUP.md  QUICK_START.md  README.md  STATUS.md  autonomous_db.py  autonomous_install.sh  docker-compose.yml  install.sh  postgresql.conf  requirements.txt  requirements_autonomous.txt  schema.sql  setup.sh
.claude/docs/: AGENT_CREATION_GUIDE.md  MCP-FULL-EVALUATION.md  MODEL_ASSIGNMENTS.md  MODEL_SELECTION.md  PLUGIN_MARKETPLACE.md  TOKEN_OPTIMIZATION.md  mcp-client-usage.md
.claude/examples/: database-usage-example.sh
.github/: ACTION_VERSIONS.md  CICD-SETUP.md  RELEASE_WORKFLOW.md  dependabot.yml  markdown-link-check.json  pull_request_template.md
.orchestr8/: health-check.sh  init-intelligence-db.sh  intelligence.db
plugins/orchestr8/mcp-server/orchestr8-bin/: Cargo.toml
plugins/orchestr8/mcp-server/orchestr8-bin/tests/: integration_test.rs
(+896 files in other folders)
